# aivpn

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  Dockerfile.client  Dockerfile.prebuilt  README.md  README_RU.md  build-musl-release.sh  build-server-release.sh  build-windows-gui.sh  deploy-server-release.sh  deploy.py  docker-compose.admin.yml  docker-compose.yml
.github/workflows/: server-release-asset.yml
aivpn-admin/: Cargo.toml  Dockerfile
aivpn-admin/src/: auth.rs  config.rs  handlers.rs  invite_store.rs  main.rs  models.rs  rate_limit.rs  state.rs  templates.rs
aivpn-admin/templates/: dashboard.html  login.html
aivpn-android/: build-rust-android.sh
aivpn-android-core/: Cargo.toml
aivpn-android-core/src/: android_tunnel.rs  lib.rs
aivpn-android/app/: build.gradle
aivpn-android/app/src/main/: AndroidManifest.xml
aivpn-android/app/src/main/java/com/aivpn/client/: AivpnCrypto.kt  AivpnJni.kt  AivpnService.kt  MainActivity.kt  SecureStorage.kt  SplitTunnelActivity.kt
aivpn-android/app/src/main/res/layout/: activity_main.xml  activity_split_tunnel.xml
aivpn-android/app/src/main/res/values/: strings.xml
aivpn-android/app/src/main/res/values-ru/: strings.xml
aivpn-client/: Cargo.toml
aivpn-client/src/: client.rs  main.rs  mimicry.rs  tunnel.rs
aivpn-common/src/: client_wire.rs  crypto.rs  lib.rs  mask.rs  network_config.rs  protocol.rs
aivpn-macos/: ConnectionKey.swift  ContentView.swift  LocalizationManager.swift  VPNManager.swift  build.sh
aivpn-server/src/: client_db.rs  gateway.rs  key_rotation.rs  main.rs  metrics.rs  nat.rs  neural.rs  passive_distribution.rs  server.rs  session.rs
aivpn-server/tests/: battle_tests.rs
aivpn-telegram-bot/: Cargo.toml  Dockerfile
aivpn-telegram-bot/src/: main.rs
aivpn-windows/: Cargo.toml
aivpn-windows/src/: key_storage.rs  localization.rs  main.rs  tray.rs  ui.rs  vpn_manager.rs
config/: admin.env.example  server.json.example
deploy/admin/: Caddyfile
docs/: ADMIN_V1.md  FORK_SYNC.md  IOS_V1_ROADMAP.md
ios/: STATUS.md
ios/AIVPN.xcodeproj/: project.pbxproj
ios/AIVPN.xcodeproj/xcshareddata/xcschemes/: AIVPN.xcscheme  AIVPNTunnel.xcscheme
ios/AIVPNApp/: AIVPN-Bridging-Header.h  AIVPNApp.swift  AIVPNConnectionKey.swift  ContentView.swift  VPNConnectionViewModel.swift
ios/AIVPNTunnel/: AIVPNTunnel-Bridging-Header.h  Info.plist  PacketTunnelProvider.swift
ios/Tests/: AIVPNTests.swift
ios/rust-core/: .gitignore  README.md
ios/rust-core/aivpn-ios-core/: Cargo.toml
ios/rust-core/aivpn-ios-core/src/: lib.rs
ios/rust-core/include/: aivpn_ios_core.h
ios/rust-core/scripts/: build_xcframework.sh
ios/scripts/: generate_xcodeproj.rb
releases/: RELEASE_NOTES.md  aivpn-client-linux-armv7-musleabihf  aivpn-client-linux-x86_64  aivpn-client-macos  aivpn-client.apk  aivpn-macos.dmg  aivpn-server  aivpn-server-linux-armv7-musleabihf
