[package]
name = "aivpn-telegram-bot"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aivpn-telegram-bot"
path = "src/main.rs"

[dependencies]
aivpn-server = { path = "../aivpn-server" }
aivpn-common = { path = "../aivpn-common" }

teloxide = { version = "0.13", features = ["macros", "ctrlc_handler"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
chrono.workspace = true
rand.workspace = true
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
fs2 = "0.4"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
dashmap = "5.5"
