[package]
name = "aivpn-windows"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aivpn"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winuser"] }
